bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: ';' expected but '=' found.
fin : Boolean =false
              ^